[metadata]
name = host_metrics
version = 0.0.1

[options]
packages = host_metrics
install_requires =
  requests
  schedule
  kafka-python
  psycopg2-binary
  jsonschema

[options.extras_require]
test = 
  pytest
  pytest-cov

[options.entry_points]
console_scripts =
    host-metrics = host_metrics:run
